# MyTaskJson

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  altlinux_compare.cpp  libaltlinux_comparison.cpp  libaltlinux_comparison.h  main.cpp
